kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
  namespace: ghost

spec:
  type: LoadBalancer

  selector:
    app: ghost

  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368
